a cleaner finish for the data transfer
but the editor needs to be closed in any case,
or... we may deactivate the run button !